# crazy_job

./: .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONVENTIONS.md  Dockerfile  README.md  USER_GUIDE.md  docker-compose.ci.yml  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  lint.yml
crazyjob/: __init__.py  config.py
crazyjob/backends/: __init__.py  base.py
crazyjob/backends/postgresql/: __init__.py  driver.py  schema.py
crazyjob/backends/postgresql/migrations/: 001_initial.sql
crazyjob/backends/sqlite/: __init__.py  driver.py  schema.py
crazyjob/backends/sqlite/migrations/: 001_initial.sql
crazyjob/cli/: __init__.py  commands.py
crazyjob/core/: __init__.py  client.py  exceptions.py  job.py  middleware.py  queue.py  retry.py  scheduler.py  serializer.py  worker.py
crazyjob/dashboard/: __init__.py
crazyjob/dashboard/adapters/: __init__.py  base.py  fastapi.py  flask.py
crazyjob/dashboard/core/: __init__.py  actions.py  factory.py  metrics.py  queries.py  sqlite_actions.py  sqlite_metrics.py  sqlite_queries.py
crazyjob/dashboard/templates/crazyjob/: active.html  base.html  completed.html  dead.html  failed.html  overview.html  queues.html  retrying.html  scheduled.html  schedules.html  workers.html
crazyjob/integrations/: __init__.py  base.py
crazyjob/integrations/fastapi/: __init__.py
crazyjob/integrations/flask/: __init__.py  context.py
tests/: conftest.py
tests/e2e/: test_scheduler_fires_cron.py  test_worker_dead_detection.py  test_worker_graceful_shutdown.py  test_worker_heartbeat.py  test_worker_processes_job.py  test_worker_retry_on_failure.py
tests/helpers/: jobs.py
tests/integration/: test_backend_dead_letters.py  test_backend_enqueue.py  test_backend_fetch_skip_locked.py  test_backend_retry_flow.py  test_dashboard_actions.py  test_dashboard_queries.py
tests/integration/sqlite/: test_sqlite_dashboard_actions.py  test_sqlite_dashboard_queries.py  test_sqlite_dead_letters.py  test_sqlite_enqueue.py  test_sqlite_fetch.py  test_sqlite_retry_flow.py
tests/unit/: test_config.py  test_fastapi_integration.py  test_job_base_class.py  test_middleware_pipeline.py  test_retry_policies.py  test_scheduler_cron.py  test_serializer.py
